# prnd-label-studio

./: .env  .gitmodules  Makefile  README.md  docker-compose.yml  pyproject.toml
prnd_label_studio/: Dockerfile  README.md
prnd_label_studio/changes/web/libs/editor/src/tools/: Polygon.js
prnd_label_studio_ml_backend/: README.md
prnd_label_studio_ml_backend/convert_polygon_to_brush/: Dockerfile  model.py
